pkl-core/src/test/files/LanguageSnippetTests/input/errors/localFixedMember.pkl
local fixed name: String = "hello"
